# novadash2

./: README.md  agent.py  comfyui.py  handlers.py  mongo.py  thread.py  tool.py  voice.py
agents/: animator.yaml  anime.yaml  eve.yaml  impressionist.yaml  logo.yaml  mars_eve.yaml  photo.yaml  pixel.yaml  vj.yaml
sdk/: pyproject.toml
sdk/eden/: __init__.py  cli.py  client.py
sdk/tests/: test_beeple.py  test_chat.py  test_chat2.py  test_create.py  test_train.py  test_xhibit.py
tests/: test_api.py  test_sdk.py  test_story.py
tools/chat/: handler.py  test.json
tools/flux_trainer/: api.yaml  test.json
tools/lora_trainer/: api.yaml
tools/media_utils/audio_video_combine/: handler.py  test.json
tools/media_utils/image_concat/: handler.py  test.json
tools/media_utils/image_crop/: handler.py  test.json
tools/media_utils/video_concat/: handler.py  test.json
tools/reel/: api.yaml  handler.py
tools/story/: handler.py
tools/write/: handler.py
